# constellation

./: .env.example  .gitignore  CLOUD_TRAINING.md  LICENSE  README.md  app.py  decision_engine.py  docker-compose.yml  inference.py  inference_multitask.py  requirements.txt  train.py  train_multitask.py  video_processor.py
backend/: Dockerfile  ingest.py  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  images.py  models.py  predictions.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/services/: __init__.py  inference.py  ingestion.py
backend/tests/: test_health.py
data_engine/: __init__.py  augmentations.py  auto_labeler.py  cityscapes_loader.py  data_loader.py  hard_case_miner.py  pyproject.toml  shadow_mode.py
deployment/: __init__.py  benchmark.py  export_onnx.py  quantize.py  server.py
docs/: architecture.md  data_engine.md  deployment.md  training.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ImageGrid.tsx  ImageModal.tsx  Layout.tsx
frontend/src/pages/: Dashboard.tsx  DataEngine.tsx
model/: __init__.py  fcos_targets.py  hydranet.py  hydranet_v1.py  hydranet_v2.py  inference.py  train.py
model/backbones/: __init__.py  efficientnet.py
model/heads/: __init__.py  depth_head.py  detection_head.py  segmentation_head.py  traffic_light_head.py
model/losses/: __init__.py  multi_task_loss.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_shadow_mode.ipynb  04_quantization.ipynb
scripts/: download_bdd100k.sh  download_samples.py  ingest_data.py  setup_env.sh
