[project]
name = "constellation-backend"
version = "0.1.0"
description = "Multi-task vision system for autonomous driving scenes"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    # ML inference dependencies
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "timm>=0.9.12",
    "pillow>=10.2.0",
    "numpy>=1.26.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "ruff>=0.1.11",
]

ml = [
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "timm>=0.9.12",
    "ultralytics>=8.1.0",
    "mobile-sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "pycocotools>=2.0.7",
    "wandb>=0.16.2",
    "opencv-python>=4.9.0.80",
    "pillow>=10.2.0",
    "numpy>=1.26.3",
    "albumentations>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
